Added links to github projects

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 									<span class="image">
 										<img src="images/nba.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="https://github.com/claywhipp/nba">
 										<h2>NBA Game Prediction in Python</h2>
 										<div class="content">
 											<p>We scraped data from NBA games, and used Python, pandas, and scikitlearn to predict the winner of future games.</p>
@@ -85,7 +85,7 @@
 									<span class="image">
 										<img src="images/amazon.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="https://github.com/claywhipp/amazon">
 										<h2>Amazon Financials Analysis in Excel</h2>
 										<div class="content">
 											<p>We analyzed Amazon's financial data to gain insights into how the company makes most of its profit.</p>
