--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <!--
-	Phantom by HTML5 UP
+	Massively by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
@@ -13,135 +13,180 @@
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
+
 		<!-- Wrapper -->
-			<div id="wrapper">
+			<div id="wrapper" class="fade-in">
+
+				<!-- Intro -->
+					<div id="intro">
+						<h1>Clay Whipp Portfolio</h1>
+						<p>Data Analyst with experience in SQL, Python, Excel, and more.</p>
+						<ul class="actions">
+							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
+						</ul>
+					</div>
 
 				<!-- Header -->
-					<header id="header">
-						<div class="inner">
+					<!-- <header id="header">
+						<a href="index.html" class="logo">Massively</a>
+					</header> -->
 
-							<!-- Logo -->
-								<!-- <a href="index.html" class="logo">
-									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Phantom</span>
-								</a> -->
-
-							<!-- Nav -->
-								<!-- <nav>
-									<ul>
-										<li><a href="#menu">Menu</a></li>
-									</ul>
-								</nav> -->
-
-						</div>
-					</header>
-
-				<!-- Menu -->
-					<!-- <nav id="menu">
-						<h2>Menu</h2>
-						<ul>
-							<li><a href="index.html">Home</a></li>
-							<li><a href="generic.html">Ipsum veroeros</a></li>
-							<li><a href="generic.html">Tempus etiam</a></li>
-							<li><a href="generic.html">Consequat dolor</a></li>
-							<li><a href="elements.html">Elements</a></li>
+				<!-- Nav -->
+					<nav id="nav">
+						<ul class="links">
+							<li class="active"><a href="index.html">Projects</a></li>
+							<!-- <li><a href="generic.html">Generic Page</a></li>
+							<li><a href="elements.html">Elements Reference</a></li> -->
 						</ul>
-					</nav> -->
+						<ul class="icons">
+							<!-- <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li> -->
+							<li><a href="https://www.linkedin.com/in/clay-whipp-788930a4/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+							<li><a href="https://github.com/claywhipp" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+						</ul>
+					</nav>
 
 				<!-- Main -->
 					<div id="main">
-						<div class="inner">
-							<header>
-								<h1>Clay Whipp Portfolio</h1>
-								<p>Data Analyst with experience in SQL, Python, Excel, and more.</p>
-									<ul class="icons">
-										<li><a href="https://www.linkedin.com/in/clay-whipp-788930a4/" class="icon brands style2 fa-linkedin"><span class="label">Twitter</span></a></li>
-										<li><a href="https://github.com/claywhipp" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
+
+						<!-- Featured Post -->
+							<!-- <article class="post featured">
+								<header class="major">
+									<span class="date">April 25, 2017</span> 
+									<h2><a href="#">And this is a<br />
+									massive headline</a></h2>
+									<p>Aenean ornare velit lacus varius enim ullamcorper proin aliquam<br />
+									facilisis ante sed etiam magna interdum congue. Lorem ipsum dolor<br />
+									amet nullam sed etiam veroeros.</p>
+								</header>
+								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
+								<ul class="actions special">
+									<li><a href="#" class="button large">Full Story</a></li>
+								</ul>
+							</article>-->
+
+						<!-- Posts -->
+							<section class="posts">
+								<article>
+									<header>
+										<span class="date">January 2023</span>
+										<h2><a href="modelcar.html">Customer and Product Analysis of Model Car Company in SQL</a></h2>
+									</header>
+									<a href="modelcar.html" class="image fit"><img src="images/query2a.png" alt="" /></a>
+									<p>I analyzed sale records from a model car company to help improve product offerings and retain customers.</p>
+									<ul class="actions special">
+										<li><a href="modelcar.html" class="button">Learn More</a></li>
+										<li><a href="https://github.com/claywhipp/modelcar" class="button">View Code</a></li>
 									</ul>
-							</header>
-							<section class="tiles">
-								<article class="style1">
-									<span class="image">
-										<img src="images/covid.jpg" alt="" />
-									</span>
-									<a href="https://github.com/claywhipp/covid">
-										<h2>Analyzing Covid Data in SQL</h2>
-										<div class="content">
-											<p>We analyzed Covid data in Azure Data Studio to see which countries have been impacted the most so far.</p>
-										</div>
-									</a>
 								</article>
-								<article class="style2">
-									<span class="image">
-										<img src="images/nba.jpg" alt="" />
-									</span>
-									<a href="https://github.com/claywhipp/nba">
-										<h2>NBA Game Prediction in Python</h2>
-										<div class="content">
-											<p>We scraped data from NBA games, and used Python, pandas, and scikitlearn to predict the winner of future games.</p>
-										</div>
-									</a>
+								<article>
+									<header>
+										<span class="date">December 2022</span>
+										<h2><a href="superstore.html">Exploring Sales Performance of Retail Store Chain in Excel</a></h2>
+									</header>
+									<a href="superstore.html" class="image fit"><img src="images/retailscreen5.png" alt="" /></a>
+									<p>I explored the recent sales performance of a fictional retail store chain to help the company better understand their sales using Microsoft Excel.</p>
+									<ul class="actions special">
+										<li><a href="superstore.html" class="button">Learn More</a></li>
+										<li><a href="https://github.com/claywhipp/superstore" class="button">View Code</a></li>
+									</ul>
 								</article>
-								<article class="style3">
-									<span class="image">
-										<img src="images/amazon.jpg" alt="" />
-									</span>
-									<a href="https://github.com/claywhipp/amazon">
-										<h2>Amazon Financials Analysis in Excel</h2>
-										<div class="content">
-											<p>We analyzed Amazon's financial data to gain insights into how the company makes most of its profit.</p>
-										</div>
-									</a>
+								<article>
+									<header>
+										<span class="date">November 2022</span>
+										<h2><a href="exchangerate.html">Euro Exchange Rate Visualization in Python</a></h2>
+									</header>
+									<a href="exchangerate.html" class="image fit"><img src="images/europlot.png" alt="" /></a>
+									<p>
+										I looked at euro exchange rate data using the pandas library in Python to visualize how the euro-dollar exchange rate changed during the
+										2007-2008 recession.
+									</p>
+									<ul class="actions special">
+										<li><a href="exchangerate.html" class="button">Learn More</a></li>
+										<li><a href="https://github.com/claywhipp/exchangerates" class="button">View Code</a></li>
+									</ul>
+								</article>
 							</section>
-						</div>
+
+						<!-- Footer -->
+							<footer>
+								<div>
+
+								</div>
+								<!-- <div class="pagination">
+									<a href="#" class="previous">Prev</a>
+									<a href="#" class="page active">1</a>
+									<a href="#" class="page">2</a>
+									<a href="#" class="page">3</a>
+									<span class="extra">&hellip;</span>
+									<a href="#" class="page">8</a>
+									<a href="#" class="page">9</a>
+									<a href="#" class="page">10</a>
+									<a href="#" class="next">Next</a>
+								</div>-->
+							</footer> 
+
 					</div>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<div class="inner">
-							<!-- <section>
-								<h2>Get in touch</h2>
-								<form method="post" action="#">
-									<div class="fields">
-										<div class="field half">
-											<input type="text" name="name" id="name" placeholder="Name" />
-										</div>
-										<div class="field half">
-											<input type="email" name="email" id="email" placeholder="Email" />
-										</div>
-										<div class="field">
-											<textarea name="message" id="message" placeholder="Message"></textarea>
-										</div>
+						<!-- <section> -->
+							<!-- <form method="post" action="#">
+								<div class="fields">
+									<div class="field">
+										<label for="name">Name</label>
+										<input type="text" name="name" id="name" />
 									</div>
-									<ul class="actions">
-										<li><input type="submit" value="Send" class="primary" /></li>
-									</ul>
-								</form>
-							</section> -->
-							<!-- <section> -->
-								<section>
-									<h2>Contact</h2>	
-									<p>541-600-9982</p>
-									<p>claywhipp@gmail.com</p>
-									<p>Location: Portland, Oregon</p>
-								</section>
-								<section>
-									<h2>Social</h2>
-									<ul class="icons">
-										<li><a href="https://www.linkedin.com/in/clay-whipp-788930a4/" class="icon brands style2 fa-linkedin"><span class="label">Twitter</span></a></li>
-										<li><a href="https://github.com/claywhipp" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
-									</ul>
-								</section>
-							<ul class="copyright">
-								<!-- <li>&copy; Untitled. All rights reserved</li> -->
-								<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-							</ul>
-						</div>
+									<div class="field">
+										<label for="email">Email</label>
+										<input type="text" name="email" id="email" />
+									</div>
+									<div class="field">
+										<label for="message">Message</label>
+										<textarea name="message" id="message" rows="3"></textarea>
+									</div>
+								</div>
+								<ul class="actions">
+									<li><input type="submit" value="Send Message" /></li>
+								</ul>
+							</form> -->
+						<!-- </section> -->
+						<section class="split contact">
+							<section class="alt">
+								<h3>Address</h3>
+								<p>Portland, Oregon</p>
+							</section>
+							<section>
+								<h3>Phone</h3>
+								<p><a href="#">(541) 600-9982</a></p>
+							</section>
+							<section>
+								<h3>Email</h3>
+								<p><a href="#">claywhipp@gmail.com</a></p>
+							</section>
+							<section>
+								<h3>Social</h3>
+								<ul class="icons alt">
+									<!-- <li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
+									<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li> -->
+									<li><a href="https://www.linkedin.com/in/clay-whipp-788930a4/" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
+									<li><a href="https://github.com/claywhipp" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+								</ul>
+							</section>
+						</section>
 					</footer>
+
+				<!-- Copyright -->
+					<div id="copyright">
+						<ul><li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
+					</div>
 
 			</div>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.scrollex.min.js"></script>
+			<script src="assets/js/jquery.scrolly.min.js"></script>
 			<script src="assets/js/browser.min.js"></script>
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
