--- a/exchangerate.html
+++ b/exchangerate.html
@@ -146,8 +146,8 @@
 								<ul class="icons alt">
 									<!-- <li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
 									<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li> -->
-									<li><a href="#" class="icon brands alt fa-linkedin"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://www.linkedin.com/in/clay-whipp-788930a4/" class="icon brands alt fa-linkedin"><span class="label">Instagram</span></a></li>
+									<li><a href="https://github.com/claywhipp" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</section>
 						</section>
