--- a/modelcar.html
+++ b/modelcar.html
@@ -68,7 +68,7 @@
 								</figure>
 								<br>
 								<p>
-									In order better understand the size of the data, I queried the number of attributes, 
+									In order to better understand the size of the data, I queried the number of attributes, 
 									number of rows for each table in the dataset and put them into a new table.
 								</p>
 								<figure>
