--- a/superstore.html
+++ b/superstore.html
@@ -82,7 +82,7 @@
 									and Copiers contributed the most to the Technology subcategory at 27% of total profit.
 								</p>
 								<p>
-									To better understand Superstore's growrth, I used a PivotTable to find that 2016 had the highest growth in sales. In that year, Technology grew the most of
+									To better understand Superstore's growth, I used a PivotTable to find that 2016 had the highest growth in sales. In that year, Technology grew the most of
 									of all the categories at a rate of 39%, and made up 37% of total sales.
 								</p>
 								<p>
